<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainActivity"
            type="com.example.cats.activities.MainActivity" />

        <variable
            name="viewModel"
            type="com.example.cats.viewModels.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.23" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_food"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/list_feed">

        </androidx.recyclerview.widget.RecyclerView>


        <Chronometer
            android:id="@+id/chrono"
            style="@style/ShapeAppearance.MaterialComponents.MediumComponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:elevation="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="chrono" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.82" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/button_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/chrono"
            app:layout_constraintVertical_bias="0.495"
            app:spanCount="3"
            tools:itemCount="6"
            tools:listitem="@layout/button_layout_rv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconDrawable="@drawable/ic_baseline_add_24"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/food_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_food"
                android:inputType="text"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/plusHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addonehour"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/chrono"
            app:layout_constraintStart_toEndOf="@+id/chrono"
            app:layout_constraintTop_toTopOf="@+id/chrono" />

        <Button
            android:id="@+id/minusHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minusonehour"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/chrono"
            app:layout_constraintEnd_toStartOf="@+id/chrono"
            app:layout_constraintTop_toTopOf="@+id/chrono" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>